package Ejercicio1;

public enum Estado {
    Disponible,
    Vendido;
}
